# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  compact-libft  main.c  readme.md  test_2e2.sh
bats.test/: cd.bats  dollar_tilde.bats  echo.bats  env.bats  exec.bats  multiple_order.bats  setenv.bats  unsetenv.bats  utils.bash
includes/: minishell.define.h  minishell.defines.h  minishell.error.h  minishell.h  minishell.limit.h  minishell.prototypes.h  minishell.structures.h  minishell.stuctures.h
main/: ft_ms.main.c  ft_ms.main.test_mode.c
prg/: pgr_print_name  test.c
render/: minishell
render/includes/: minishell.defines.h  minishell.structures.h
render/libft/includes/: ft_test.h
render/libft/src/: ft_array.func.c
render/src/: ft_ms.cd.0.c  ft_ms.cd.1.c  ft_ms.env.utils.c  ft_ms.execve.c  ft_ms.handle_dollar_and_tilde.1.c  ft_ms.main.c  ft_ms.utils.c
src/: CMakeLists.txt  binary.c  builtin.cd.2.c  builtin.cd.c  builtin.cd.standardize.c  builtin.echo.c  builtin.env.c  builtin.env.utils.c  builtin.exit.c  builtin.setenv.c  builtin.unsetenv.c  env.add-and-copy.c  env.add-copy.c  env.delete.c  env.remove.c  env.setenv.c  env.utils.c  env2.utils.c  ft_erno.c  ft_ms.builtin.echo.c  ft_ms.cd.0.c  ft_ms.cd.1.c  ft_ms.cd.c  ft_ms.cd.change_dir.c  ft_ms.env.add.c  ft_ms.env.c  ft_ms.env.getters.c  ft_ms.env.set_unset.c  ft_ms.env.utils.c  ft_ms.exec.c  ft_ms.execve.c  ft_ms.exit.c  ft_ms.get_line.c  ft_ms.handle_dollar_and_tilde.0.c  ft_ms.handle_dollar_and_tilde.1.c  ft_ms.loop.c  ft_ms.main.c  ft_ms.parse_env.c  ft_ms.parse_str.c  ft_ms.parser.get_line.c  (+34 more)
src/cd/: ft_ms.builtin.cd.c  ft_ms.cd.c  ft_ms.cd.change_dir.c  ft_ms.cd.h  ft_ms.cd.move_to_directory.c  ft_ms.cd.serialize_path.c  ft_ms.cd.utils.c
src/env/: ft_ms.env.c  ft_ms.env.parse.c  ft_ms.env.setenv.c  ft_ms.env.unsetenv.c  ft_ms.env.utils.c  ft_ms.env.utils_1.c  ft_ms.env.utils_2.c
test/: env.parse.test.c  env.test.c  ft_ms.builtin.echo.test.c  ft_ms.cd.move_directory.test.c  ft_ms.cd.serialize_path.test.c  ft_ms.cd.test.c  ft_ms.env.test.c  ft_ms.env.utils.test.c  ft_ms.execve.test.c  ft_ms.get_line.test.c  ft_ms.replace_dollar_tilde.test.c  ft_ms.test_exec.c  ft_ms.utils.find_binary.test.c  ft_ms.utils.test.c  main.test.c  main.test.raw_mode.c  ms.parser.test.c  new_test.c  new_test_function.c  test.c  test.h  test_function.c  test_main.c
test_prg/: print_name.c  print_no_name
unit.test/: CMakeLists.txt  ft_ms.cd.test.c  ft_ms.env.test.c  ft_ms.replace_dollar_tilde.test.c  ft_ms.utils.test.c  main.test.raw_mode.c
